--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,3 +15,17 @@ body{
 p{
   text-align: center;
 }
+h2 {
+  font-family: Verdana;
+  font-weight: 300px;
+  font-size: 42px;
+}
+.subh2 {
+  font-family: Verdana;
+  font-size: 21px;
+  color: gray;
+}
+.footer {
+  text-align: right;
+  color: gray;
+}
