--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,8 @@ h2 {
   font-family: Verdana;
   font-weight: 300px;
   font-size: 42px;
+  color: white;
+  text-align: center;
 }
 .subh2 {
   font-family: Verdana;
